css/about/about.css
body {
  background-color: #CBD1E9;
  font-family: Karla;
  color: #515A5A;
  font-size: 16pt;
  position: relative;
}
    h1 {
      font-family: Comfortaa;
      font-size: 48px;
      color: #ECECEC;
      position: absolute;
      padding-left: 20px;
      display: inline-block;
    }
h2, h3, h5, {
    margin-left: 40px;
}

/* USE THIS HEADER */
header {
  font-family: Comfortaa;
  font-size: 48px;
  padding: 40px;
  background-color: #6e8aff;
  color: white;
  position: relative;
}
.dot {
  height: 120px;
  width: 120px;
  border-radius: 50%;
  background-color: #4963CE;
  position: relative;

  display: inline-block;
}
.rectangle {
  height: 30px;
  width: 90%;
  background-color: #3fb893;
  margin-left: 5%;
  position: absolute;
  bottom: -15px;
  left: 0px;
}
/*USE THE ABOVE*/
#myBtn {
    background-color: transparent;
    border: none;
    display: inline-block;
}

/*STYLING FOR THE OVERLAY GOES HERE*/
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.4);
}

.modal-body {padding: 2px 16px;}

/* STYLING FOR THE CONTENT OF THE OVERLAY GOES HERE!!*/
.modal-content {
    position: relative;
    background:url("../../images/homepage-images/bgindex.png");
    margin: auto;
    padding: 0;
    width: 80%;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
    animation-name: animatetop;
    animation-duration: 0.4s
}

/* Add Animation */
@keyframes animatetop {
    from {top: -300px; opacity: 0}
    to {top: 0; opacity: 1}
}


#housecontainer {
text-align: center;
margin: auto;
}

#housecontainer2 {
    padding-bottom: 50px;
    text-align: center;
    margin: auto;
}

#piece1 {
    padding: 10px;
    background:url("../../images/homepage-images/roof1empty.png") no-repeat;
    height: 283px;
    width: 248px;
    display: inline-block;
}

#piece2 {
    padding: 10px;
    background:url("../../images/homepage-images/roof2empty.png") no-repeat;
    height: 360px;
    width: 249px;
    display: inline-block;
}

#piece3 {
    margin: 0 auto;
    padding: 10px;
    background:url("../../images/homepage-images/wall1empty.png") no-repeat;
    height: 365px;
    width: 228px;
    display: inline-block;
}

#piece4 {
    margin: 0 auto;
    padding: 10px;
    background:url("../../images/homepage-images/wall2empty.png") no-repeat;
    height: 365px;
    width: 228px;
    display: inline-block;
}

/* House piece hovers*/

#piece1:hover {
    padding: 10px;
    background:url("../../images/homepage-images/roof1hover.png") no-repeat;
    height: 283px;
    width: 248px;
}
#piece2:hover {

    padding: 10px;
    background:url("../../images/homepage-images/roof2hover.png") no-repeat;
    height: 360px;
    width: 249px;
}
#piece3:hover {
    padding: 10px;
    background:url("../../images/homepage-images/wall1hover.png") no-repeat;
    height: 365px;
    width: 228px;
}
#piece4:hover {
    padding: 10px;
    background:url("../../images/homepage-images/wall2hover.png") no-repeat;
    height: 365px;
    width: 228px;
}

div {
    display: block;
}

h2 {
    margin-top: 40px;
    margin-left: 40px;
}

h3 {
    margin-top: 10px;
    margin-left: 10px;
}

.box1, .box2, .box3 {
     margin-top: 40px;
     background-color: #fbfbfb;
     margin-left: 40px;
     margin-right: 40px;
     padding: 20px;
     top: 20px;
}

p {
    margin-left: 40px;
    margin-right: 80px;
}


h5 {
    font-size: 38px;
}


}
input[type=button] {
    height: 38px;
    background: #e8491d;
    border: 0;
    padding-left: 20px;
    padding-right: 20px;
    color: #eeeeee;
}

#submission input[type="email"], #submission input[type="text"]  {
    margin-left: 40px;
}
#submission input[type="radio"] {
    margin-left: 40px;
}

input[name="DOBDay"], input[name="DOBMonth"], input[name="DOBYear"] {
    margin-left: 40px;
}

.image1{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 60%;
    padding:20px;
}
#form
.center{

}

